--- a/src/app/components/dish/dish.component.html
+++ b/src/app/components/dish/dish.component.html
@@ -2,11 +2,10 @@
     <div
         class="dish-name"
         [attr.contenteditable]="edit.isEdit()"
-        (blur)="textChange.emit($any($event.target).innerText)"
-    >
-        {{ text() }}
-    </div>
+        [textContent]="text()"
+        (blur)="textChange.emit($any($event.target).innerText.trim())"
+    ></div>
     @if (this.edit.isEdit()) {
-        <nz-icon nzType="close-circle" nzTheme="outline" />
+        <nz-icon nzType="close-circle" nzTheme="outline" (click)="textChange.emit('')" />
     }
 </div>
