--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,7 +1,7 @@
 .seven-grid {
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: minmax(150px, 1fr);
+  grid-auto-columns: minmax(200px, 1fr);
   gap: 16px;
   overflow-x: auto;
   height: 100%;
@@ -13,8 +13,9 @@
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  max-height: calc(100vh - 112px);
+  max-height: calc(100vh - 157px);
   overflow: hidden;
+  height: fit-content;
 
   h4 {
     padding-left: 8px;
@@ -30,5 +31,11 @@
     scrollbar-width: thin;
     scrollbar-color: rgba(106, 168, 79, 0.5) transparent;
     scrollbar-gutter: stable both-edges;
+  }
+}
+
+@media (max-width: 768px) {
+  .meals {
+    padding: 0 8px;
   }
 }
