--- a/src/app/components/meal/meal.component.html
+++ b/src/app/components/meal/meal.component.html
@@ -1,8 +1,8 @@
 <nz-card style="width: 100%; border-radius: 10px; overflow: hidden" [nzTitle]="title">
-    <app-dish [text]="'Meal 1'" (textChange)="updateDish($event)" />
-    <app-dish [text]="'Meal 2'" (textChange)="updateDish($event)" />
-    <app-dish [text]="'Meal 3'" (textChange)="updateDish($event)" />
+    @for (dish of dishes; track $index) {
+        <app-dish class="meal-element" [text]="dish" (textChange)="updateDish($event, $index)" />
+    }
     @if (edit.isEdit()) {
-        <app-dish />
+        <button class="meal-button" nz-button nzType="primary" (click)="createDish()">Добавить</button>
     }
 </nz-card>
